Fixed css, so styling looks better on mobile devices. Further work with logic as well.

--- a/src/style.css
+++ b/src/style.css
@@ -110,5 +110,17 @@ body {
 }
 
 @media screen and (max-width: 1000px) {
+  .temp-value {
+    font-size: 8em;
+    font-weight: 400;
+  }
 
+  .inner-info-con {
+    font-size: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5em;
+    margin: 4px;
+  }
 }
